--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@testing-library/user-event": "13.5.0",
     "axios": "0.26.0",
     "craco-alias": "3.0.1",
+    "dotenv": "^16.0.0",
+    "firebase": "^9.6.9",
     "formik": "2.2.9",
     "gatekeeper-client-sdk": "0.4.2",
     "i18next": "21.6.11",
