--- a/package.json
+++ b/package.json
@@ -30,11 +30,15 @@
   },
   "dependencies": {
     "@craco/craco": "6.4.3",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@fortawesome/fontawesome-svg-core": "1.3.0",
     "@fortawesome/free-brands-svg-icons": "6.0.0",
     "@fortawesome/free-regular-svg-icons": "6.0.0",
     "@fortawesome/free-solid-svg-icons": "6.0.0",
     "@fortawesome/react-fontawesome": "0.1.17",
+    "@mui/material": "^5.5.2",
+    "@mui/x-data-grid": "^5.6.1",
     "@reduxjs/toolkit": "1.7.2",
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.3",
