--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-bootstrap": "1.6.1",
     "react-dom": "17.0.2",
     "react-i18next": "11.15.4",
+    "react-qr-code": "^2.0.3",
     "react-redux": "7.2.6",
     "react-router-dom": "6.2.1",
     "react-scripts": "4.0.3",
