--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "adminlte-3-react",
   "version": "0.1.0",
+  "homepage": "",
   "private": true,
   "scripts": {
     "start": "craco start",
@@ -86,6 +87,7 @@
     "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-unused-imports": "1.1.5",
+    "gh-pages": "^3.2.3",
     "husky": "7.0.4",
     "lint-staged": "12.3.4",
     "prettier": "2.5.1",
