--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-redux": "7.2.6",
     "react-router-dom": "6.2.1",
     "react-scripts": "4.0.3",
+    "react-to-print": "^2.14.7",
     "react-toastify": "8.2.0",
     "redux": "4.1.2",
     "redux-logger": "3.0.6",
